# SOL_BOT

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  GUIA_TERMIUS.md  Makefile  PLAN_V3.md  PROJECT_STATUS.md  README.md  bot_manager.sh  check_apis.py  deploy.sh  docker-compose.yml  generate_wallet.py  settings.json  setup_gcp.sh  start_bot.sh  targets.json  trading_state.db-shm  trading_state.db-wal  update_config.sh  update_wallet.sh
.github/workflows/: deploy.yml
core/: .env.example  .gitignore  Cargo.toml  README.md  TELEGRAM_SETUP.md  build.rs  sqlite::memory:  status.sh
core/examples/: raydium_test.rs
core/proto/: chassis.proto
core/src/: auto_buyer.rs  config.rs  executor_v2.rs  jito.rs  latency.rs  lib.rs  observability.rs  price_feed.rs  raydium.rs  state_manager.rs  telemetry_server.rs  trailing_sl.rs  validation.rs  websocket.rs  ws_feed.rs
core/src/engine/: commands.rs  filters.rs  mod.rs  momentum.rs  router.rs  strategy.rs
core/src/telegram/: mod.rs
core/src/telegram/commands/: buy.rs  dashboard.rs  mod.rs  monitor.rs  sell.rs
core/the_chassis/: .env.example  ADVANCED_FEATURES.md  ARCHITECTURAL_V2_LOG.md  Cargo.toml  FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JOURNEY_LOG.md  README.md  TELEGRAM_SETUP.md  build.rs  pools_cache.json  settings.json  start.sh  status.sh  targets.json  trading_state.db  trading_state.db-shm  trading_state.db-wal
core/the_chassis/examples/: raydium_test.rs
core/the_chassis/logs/: chassis.log.2026-02-11  chassis.log.2026-02-19  chassis.log.2026-02-20
core/the_chassis/proto/: geyser.proto
core/the_chassis/src/: amm_math.rs  auto_buyer.rs  config.rs  emergency.rs  executor.rs  executor_simple.rs  executor_trait.rs  executor_v2.rs  geyser.rs  grpc_server.rs  jito.rs  jupiter.rs  latency.rs  lib.rs  liquidity_monitor.rs  main.rs  observability.rs  price_feed.rs  raydium.rs  raydium_executor.rs  scanner.rs  state_manager.rs  telegram.rs  telegram_commands.rs  trailing_sl.rs  validation.rs  wallet.rs  websocket.rs  ws_feed.rs
core/the_chassis/src/engine/: actuators.rs  filters.rs  mod.rs  momentum.rs  types.rs
core/the_chassis/src/sensors/: dexscreener.rs  helius.rs  mod.rs
core/the_chassis/src/telegram/: mod.rs
core/the_chassis/src/telegram/commands/: mod.rs  monitor.rs  sell.rs  system.rs
docs/: ARQUITECTURA_VISUAL.md  AUTO_EXECUTOR_GUIDE.md  EMERGENCY_SYSTEM.md  EXIT_STRATEGY.md  FEE_SYSTEM.md  FLUJO_OPERATIVO.md  NEXT_STEPS_AUTO_SELL.md  PROGRESS_REPORT_v0.9.0.md  QUICKSTART.md  RAYDIUM_BUY_ERRORS_FIX.md  RAYDIUM_IMPLEMENTATION.md  REFACTORING_PLAN_2026-02-11.md  REFACTORING_PROGRESS.md  REFACTORING_PROGRESS_2026-02-11.md  RESUMEN_SESION_2026-02-09.md  ROADMAP_EJECUTABLE.md  ROADMAP_INGENIERIA_HFT_2026.md  SESSION_2026-02-09.md  SESSION_INSTITUTIONAL_REFACTOR_2026-02-09.md  SPRINT_B_PROGRESS.md  STATE_MANAGER_INTEGRATION.md  SUMMARY_SESSION_20260208.md  TECHNICAL_ROADMAP.md  TELEGRAM_COMMANDS.md  THE_CHASSIS_ARCHITECTURE.md  THE_CHASSIS_MANUAL.md  THE_CHASSIS_PHASE2_GRPC.md
docs/BLUE_BOOK/: ARCHITECTURE_BLUEPRINT.md  README.md  TELEMETRY_MANUAL.md
docs/sessions/: 2026-02-08_closing_report.md
intelligence/: Cargo.toml
intelligence/ml/scripts/operational/audits/: audit_CLAWRA_20260209_212733.md  audit_Ferociter_20260209_184100.md  audit_MOON_20260209_184125.md  audit_ROCK_20260209_184112.md
intelligence/scripts/: auto_audit.py  chassis_buy.py  chassis_pb2.py  chassis_pb2_grpc.py
intelligence/src/: backtesting.rs  lib.rs  strategy_engine.rs
operational/: CHECKLIST_DIA_8.md  DEXSCREENER_FILTERS_CONFIG.md  PROTOCOLO_OPERACIONAL.md  QUICK_CHECKLIST.txt  QUICK_REFERENCE_DAY9.md
operational/audits/: audit_BFC_20260209_212732.md  audit_Gentlemen_20260209_174942.md  audit_Gentlemen_20260209_175048.md  audit_Goyim_20260209_174931.md  audit_H1T_20260208_0111.md  audit_ICEBEAR_20260208_005858_REJECTED.md  audit_Illuminati_20260209_212733.md  audit_LOTUS_20260209_174943.md  audit_PIKACHU_20260208_0107.md  audit_template_20260206.md
operational/logs/: post_mortem_20260205_DOOM.md  session_20260208_DAY9_LOG.md  session_20260208_DAY9_plan.md  simulated_trades.csv  status_check_20260208_005238.md  wallet_analysis_20260206.md
operational/scripts/: audit_sniper.py  buy.sh  helius_engine.py  help.sh  trading_session.sh  wallet_monitor.py
operational/wallets/: README_SECURITY.md
scratch/: checklist_operativa.md  trading_setup.sh
