[package]
name = "trading_chassis"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC & Proto (Yellowstone / Geyser)
tonic = "0.9"
prost = "0.11"
tokio-stream = "0.1"
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.9"
