[package]
name = "the_chassis"
version = "0.9.0"
edition = "2021"
authors = ["Ruben"]
description = "High-performance Solana trading engine - The Chassis"

[dependencies]
# Solana Core (Versiones estables)
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.0"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# WebSocket & Network
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"
bs58 = "0.5"

# Utilities
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
webbrowser = "0.8" # ⚡ Para abrir Jupiter automáticamente

[profile.release]
opt-level = 3
lto = true
